Dodano IO i klasy Ifa

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.17.1)
 set(CXX_STANDARD 17)
 set(CXX_STANDARD TRUE)
 
-set(LOGIC_SOURCES src/Assignment.cpp src/GlobalBlock.cpp src/IntermidiateParser.cpp src/MainBlock.cpp)
+set(LOGIC_SOURCES src/Assignment.cpp src/GlobalBlock.cpp src/IntermidiateParser.cpp src/MainBlock.cpp src/IOCommand.cpp)
 
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
