--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -1,12 +1,12 @@
 project(compiler)
 cmake_minimum_required(VERSION 3.17.1)
 set(CXX_STANDARD 17)
-set(CXX_STANDARD TRUE)
+set(CXX_STANDARD_REQUIRED TRUE)
 
 set(
     LOGIC_SOURCES src/Assignment.cpp src/GlobalBlock.cpp src/IntermidiateParser.cpp
     src/MainBlock.cpp src/IOCommand.cpp src/Block.cpp src/IfBlock.cpp src/IntermidiateCode.cpp
-    src/WhileBlock.cpp src/Procedure.cpp
+    src/WhileBlock.cpp src/Procedure.cpp src/Multiplication.cpp
   )
 
 find_package(FLEX REQUIRED)
